--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,23 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-pydantic-settings==2.5.2
-python-multipart==0.0.9
+annotated-types==0.7.0
+anyio==4.11.0
 bcrypt==4.2.0
-
+click==8.3.0
+colorama==0.4.6
+fastapi==0.115.0
+h11==0.16.0
+httptools==0.7.1
+idna==3.11
+Pillow
+psutil
+pydantic==2.12.1
+pydantic-settings==2.5.2
+pydantic_core==2.41.3
+python-dotenv==1.1.1
+python-multipart==0.0.9
+PyYAML==6.0.3
+sniffio==1.3.1
+starlette==0.38.6
+typing_extensions==4.15.0
+typing-inspection==0.4.2
+uvicorn==0.30.6
+watchfiles==1.1.0
